--- a/src/Components/Movie.css
+++ b/src/Components/Movie.css
@@ -17,7 +17,7 @@
   border-radius: 8px;
 }
 .movie-container {
-  border: 1px solid black;
+  border: 1px solid rgb(190, 133, 165);
   text-align: center;
   border-radius: 8px;
   transition: all 0.4s ease-in-out;
